Changes by zxpow